# machines-gcs-source

./: LICENSE  README.md  machines-gcs-source.cabal
src/Data/Machine/Source/Google/: Storage.hs
test/: Doctests.hs  Spec.hs
